--- a/src/Microservices/Register/RegisterMicroservice.Api/appsettings.json
+++ b/src/Microservices/Register/RegisterMicroservice.Api/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Port=5432;User id=postgres;password=postgres;database=RegisterMicroservice"
-  }
+  },
+  "Jwt": {
+    "Secret": "2cd53c00-386e-4194-9dc2-d9931a37a672"
+  } 
 }
