--- a/src/Web/Web.MVC/Web.MVC/Dockerfile
+++ b/src/Web/Web.MVC/Web.MVC/Dockerfile
@@ -9,10 +9,10 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["src/Web/Web.MVC/Web.MVC.csproj", "src/Web/Web.MVC/"]
-RUN dotnet restore "./src/Web/Web.MVC/./Web.MVC.csproj"
+COPY ["src/Web/Web.MVC/Web.MVC/Web.MVC.csproj", "src/Web/Web.MVC/Web.MVC/"]
+RUN dotnet restore "./src/Web/Web.MVC/Web.MVC/./Web.MVC.csproj"
 COPY . .
-WORKDIR "/src/src/Web/Web.MVC"
+WORKDIR "/src/src/Web/Web.MVC/Web.MVC"
 RUN dotnet build "./Web.MVC.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
