--- a/src/Microservices/Register/RegisterMicroservice.Api/appsettings.json
+++ b/src/Microservices/Register/RegisterMicroservice.Api/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;User id=postgres;password=postgres;database=RegisterMicroservice"
-  }
+  "AllowedHosts": "*"
 }
