--- a/src/Web/Web.MVC/Web.MVC/Web.MVC.csproj
+++ b/src/Web/Web.MVC/Web.MVC/Web.MVC.csproj
@@ -10,12 +10,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.TagHelpers" Version="2.1.3" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\BuildingBlocks\RegisterMicroserviceLib\RegisterMicroserviceLib.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Pages\Auth\" />
   </ItemGroup>
 
 </Project>
