--- a/src/Gateway/ApiGateway/Dockerfile
+++ b/src/Gateway/ApiGateway/Dockerfile
@@ -1,5 +1,3 @@
-#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER app
 WORKDIR /app
@@ -8,16 +6,17 @@ EXPOSE 8081
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
-WORKDIR /src
-COPY ["src/Gateway/ApiGateway/ApiGateway.csproj", "src/Gateway/ApiGateway/"]
-RUN dotnet restore "./src/Gateway/ApiGateway/./ApiGateway.csproj"
+WORKDIR /src/Gateway
+RUN mkdir ApiGateway
+WORKDIR /src/Gateway/ApiGateway
+COPY ApiGateway.csproj .
+RUN dotnet restore ./Gateway/ApiGateway.csproj
 COPY . .
-WORKDIR "/src/src/Gateway/ApiGateway"
-RUN dotnet build "./ApiGateway.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build ./Gateway/ApiGateway.csproj -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./ApiGateway.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish ./Gateway/ApiGateway.csproj -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
