--- a/src/Web/Web.MVC/Web.MVC/Dockerfile
+++ b/src/Web/Web.MVC/Web.MVC/Dockerfile
@@ -1,5 +1,3 @@
-#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER app
 WORKDIR /app
@@ -8,17 +6,17 @@ EXPOSE 8081
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
-WORKDIR /src
-COPY ["src/Web/Web.MVC/Web.MVC/Web.MVC.csproj", "src/Web/Web.MVC/Web.MVC/"]
-COPY ["src/BuildingBlocks/RegisterMicroserviceLib/RegisterMicroserviceLib.csproj", "src/BuildingBlocks/RegisterMicroserviceLib/"]
-RUN dotnet restore "./src/Web/Web.MVC/Web.MVC/./Web.MVC.csproj"
+WORKDIR /src/Web
+RUN mkdir Web.MVC
+WORKDIR /src/Web/Web.MVC
+COPY Web.MVC.csproj .
+RUN dotnet restore ./Web/Web.MVC.csproj
 COPY . .
-WORKDIR "/src/src/Web/Web.MVC/Web.MVC"
-RUN dotnet build "./Web.MVC.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build ./Web/Web.MVC.csproj -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./Web.MVC.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish ./Web/Web.MVC.csproj -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
