--- a/src/Microservices/Register/RegisterMicroservice.Api/Dockerfile
+++ b/src/Microservices/Register/RegisterMicroservice.Api/Dockerfile
@@ -6,17 +6,17 @@ EXPOSE 8081
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
-WORKDIR /src/Microservices/Register
-RUN mkdir RegisterMicroservice.Api
-WORKDIR /src/Microservices/Register/RegisterMicroservice.Api
-COPY RegisterMicroservice.Api.csproj .
-RUN dotnet restore ./Microservices/Register/RegisterMicroservice.Api.csproj
+WORKDIR /src
+COPY ["src/Microservices/Register/RegisterMicroservice.Api/RegisterMicroservice.Api.csproj", "src/Microservices/Register/RegisterMicroservice.Api/"]
+COPY ["src/BuildingBlocks/RegisterMicroserviceLib/RegisterMicroserviceLib.csproj", "src/BuildingBlocks/RegisterMicroserviceLib/"]
+RUN dotnet restore "./src/Microservices/Register/RegisterMicroservice.Api/./RegisterMicroservice.Api.csproj"
 COPY . .
-RUN dotnet build ./Microservices/Register/RegisterMicroservice.Api.csproj -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/src/Microservices/Register/RegisterMicroservice.Api"
+RUN dotnet build "./RegisterMicroservice.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish ./Microservices/Register/RegisterMicroservice.Api.csproj -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./RegisterMicroservice.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
