Update ssl certificate

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,9 +14,9 @@ services:
          - "1213:8081"
        environment:
         - ASPNETCORE_ENVIRONMENT=Development
-        - ASPNETCORE_URLS=http://+:8080;https://+:8081
-        - ASPNETCORE_Kestrel__Certificates__Default__Password=https
-        - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
+        - ASPNETCORE_URLS=https://+:8081;http://+:8080
+        - ASPNETCORE_Kestrel__Certificates__Default__Password=Shi8Gb6vPznq
+        - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/httpscertificate.pfx
        networks: 
          - "register-microservice-api-network"
        depends_on:
@@ -33,9 +33,9 @@ services:
         - "2212:8081"
       environment:
         - ASPNETCORE_ENVIRONMENT=Development
-        - ASPNETCORE_URLS=http://+:8080;https://+:8081
-        - ASPNETCORE_Kestrel__Certificates__Default__Password=https
-        - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
+        - ASPNETCORE_URLS=https://+:8081;http://+:8080
+        - ASPNETCORE_Kestrel__Certificates__Default__Password=Shi8Gb6vPznq
+        - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/httpscertificate.pfx
       networks: 
         - database-network
       depends_on:
