Add docker compose file

--- a/src/Microservices/Register/RegisterMicroservice.Api/RegisterMicroservice.Api.csproj
+++ b/src/Microservices/Register/RegisterMicroservice.Api/RegisterMicroservice.Api.csproj
@@ -8,6 +8,7 @@
     <UserSecretsId>e59ca7f1-3ce9-44c2-9728-c54c68f78230</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
