--- a/src/Web/Web.MVC/Web.MVC/appsettings.json
+++ b/src/Web/Web.MVC/Web.MVC/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Uri": {
+    "Protocol": "https",
+    "DomainName": "localhost:1213"
+  } 
 }
