--- a/src/Microservices/Register/RegisterMicroservice.Api/appsettings.json
+++ b/src/Microservices/Register/RegisterMicroservice.Api/appsettings.json
@@ -5,13 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Kestrel:Certificates:Development:Password": "08c8a485-4361-4e1b-a3aa-a6cb0bdd9cc9",
-  "Database:ConnectionString": "Server=host.docker.internal;Port=5432;User id=postgres;password=postgres;database=RegisterMicroservice",
-  "Jwt:Secret": "2cd53c00-386e-4194-9dc2-d9931a37a672",
-  "Email:UserName": "11aaaaqa@gmail.com",
-  "Email:Smtp": "smtp.gmail.com",
-  "Email:Port": "465",
-  "Email:Password": "ritj mtvd ywvw qret",
-  "Email:From": "11aaaaqa@gmail.com"
+  "AllowedHosts": "*"
 }
