--- a/src/Web/Web.MVC/Web.MVC/appsettings.Development.json
+++ b/src/Web/Web.MVC/Web.MVC/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "Uri": {
+    "Protocol": "https",
+    "DomainName": "localhost:1213"
   }
 }
