--- a/src/Web/Web.MVC/Web.MVC/appsettings.json
+++ b/src/Web/Web.MVC/Web.MVC/appsettings.json
@@ -5,9 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Uri": {
-    "Protocol": "https",
-    "DomainName": "localhost:1213"
-  } 
+  "AllowedHosts": "*"
 }
