--- a/src/Web/Web.MVC/Web.MVC/Dockerfile
+++ b/src/Web/Web.MVC/Web.MVC/Dockerfile
@@ -8,6 +8,7 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["src/Web/Web.MVC/Web.MVC/Web.MVC.csproj", "src/Web/Web.MVC/Web.MVC/"]
+COPY ["src/Libs/GeneralClassesLib/GeneralClassesLib.csproj", "src/Libs/GeneralClassesLib/"]
 RUN dotnet restore "./src/Web/Web.MVC/Web.MVC/./Web.MVC.csproj"
 COPY . .
 WORKDIR "/src/src/Web/Web.MVC/Web.MVC"
