--- a/src/Building-blocks/MessageBus/MessageBus.csproj
+++ b/src/Building-blocks/MessageBus/MessageBus.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MassTransit" Version="8.2.4" />
+    <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.4" />
+  </ItemGroup>
+
 </Project>
