--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,19 @@ services:
       depends_on:
         - postgres-db
 
+    user-microservice-api:
+      image: ${DOCKER_REGISTRY-}user-microservice-api
+      build:
+        context: .
+        dockerfile: src/Microservices/User/UserMicroservie.Api/Dockerfile
+      ports:
+        - "1122:8080"
+      environment:
+        - ASPNETCORE_ENVIRONMENT=Development
+        - ASPNETCORE_URLS=http://+:8080
+      depends_on:
+        - postgres-db
+
     postgres-db:
        container_name: postgres
        image: postgres:latest
@@ -44,6 +57,7 @@ services:
          - "5432:5432"
        volumes: 
          - postgres-data:/var/lib/postgresql/data
+
 volumes:
   postgres-data:    
     
