Add rabbitmq settings

--- a/src/Microservices/Register/RegisterMicroservice.Api/appsettings.Development.json
+++ b/src/Microservices/Register/RegisterMicroservice.Api/appsettings.Development.json
@@ -13,5 +13,8 @@
   "Email:Smtp": "smtp.gmail.com",
   "Email:Port": "465",
   "Email:Password": "ritj mtvd ywvw qret",
-  "Email:From": "11aaaaqa@gmail.com"
+  "Email:From": "11aaaaqa@gmail.com",
+  "RabbitMQ:User": "rmuser",
+  "RabbitMQ:Password": "rmpassword",
+  "RabbitMQ:HostName": "rabbitmq"
 }
