--- a/src/Microservices/User/UserMicroservie.Api/appsettings.Development.json
+++ b/src/Microservices/User/UserMicroservie.Api/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "Database": {
     "ConnectionString": "Server=host.docker.internal;Port=5432;User id=postgres;password=postgres;database=UserMicroservice"
-  } 
+  },
+  "RabbitMQ:User": "rmuser",
+  "RabbitMQ:Password": "rmpassword",
+  "RabbitMQ:HostName": "rabbitmq"
 }
