--- a/src/Web/Web.MVC/Web.MVC/appsettings.Development.json
+++ b/src/Web/Web.MVC/Web.MVC/appsettings.Development.json
@@ -9,5 +9,6 @@
   "Uri": {
     "Protocol": "https",
     "DomainName": "localhost:1213"
-  }
+  },
+  "Jwt:Secret": "2cd53c00-386e-4194-9dc2-d9931a37a672"
 }
