--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,7 +82,7 @@ services:
             - RABBITMQ_DEFAULT_PASS=rmpassword
             - RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS=-rabbit log_levels [{connection,error},{default,error}] disk_free_limit 2147483648
         volumes:
-            - ./rabbitmq:/var/lib/rabbitmq
+            - ./rabbitmq:/var/lib/rabbitmq/mnesia
         ports:
             - 15672:15672
             - 5672:5672
