--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,32 @@ services:
         - postgres-user-microservice
         - rabbitmq
 
+    topic-microservice-api:
+      image: ${DOCKER_REGISTRY-}topic-microservice-api
+      build:
+        context: .
+        dockerfile: src/Microservices/Topic/TopicMicroservice.Api/Dockerfile
+      ports:
+        - "5365:8080"
+      environment:
+        - ASPNETCORE_ENVIRONMENT=Development
+        - ASPNETCORE_URLS=http://+:8080
+      depends_on:
+        - postgres-topic-microservice
+
+    postgres-topic-microservice:
+      container_name: postgres-topic-microservice
+      image: postgres:latest
+      expose:
+        - 5432
+      environment:
+        POSTGRES_USER: postgres
+        POSTGRES_PASSWORD: postgres
+        POSTGRES_DB: TopicMicroservice
+        POSTGRES_HOST: postgres-topic-microservice
+      volumes: 
+        - postgres-data:/var/lib/postgresql/data
+
     postgres-register-microservice:
        container_name: postgres-register-microservice
        image: postgres:latest
@@ -86,6 +112,8 @@ services:
         ports:
             - 15672:15672
             - 5672:5672
+
 volumes:
   postgres-data:    
     
+
