--- a/src/Microservices/Discussion/DiscussionMicroservice.Api/appsettings.Development.json
+++ b/src/Microservices/Discussion/DiscussionMicroservice.Api/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Database:ConnectionString": "Server=host.docker.internal;Port=5432;User id=postgres;password=postgres;database=DiscussionMicroservice"
+  "Database:ConnectionString": "Server=host.docker.internal;Port=5432;User id=postgres;password=postgres;database=DiscussionMicroservice",
+  "RabbitMQ:User": "rmuser",
+  "RabbitMQ:Password": "rmpassword",
+  "RabbitMQ:HostName": "rabbitmq"
 }
