--- a/src/Web/Web.MVC/Web.MVC/Web.MVC.csproj
+++ b/src/Web/Web.MVC/Web.MVC/Web.MVC.csproj
@@ -21,4 +21,12 @@
     <ProjectReference Include="..\..\..\Libs\GeneralClassesLib\GeneralClassesLib.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\Topic\Topic.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\Topic\Topic.cshtml" />
+  </ItemGroup>
+
 </Project>
