--- a/src/Microservices/Topic/tests/TopicMicroservice.UnitTests/TopicMicroservice.UnitTests.csproj
+++ b/src/Microservices/Topic/tests/TopicMicroservice.UnitTests/TopicMicroservice.UnitTests.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\TopicMicroservice.Api\TopicMicroservice.Api.csproj" />
+  </ItemGroup>
+
 </Project>
