--- a/src/Microservices/Comment/CommentMicroservice.Api/CommentMicroservice.Api.csproj
+++ b/src/Microservices/Comment/CommentMicroservice.Api/CommentMicroservice.Api.csproj
@@ -25,4 +25,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Building-blocks\MessageBus\MessageBus.csproj" />
+  </ItemGroup>
+
 </Project>
