--- a/src/Microservices/Comment/tests/CommentMicroservice.IntegrationTests/CommentMicroservice.IntegrationTests.csproj
+++ b/src/Microservices/Comment/tests/CommentMicroservice.IntegrationTests/CommentMicroservice.IntegrationTests.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\CommentMicroservice.Api\CommentMicroservice.Api.csproj" />
+  </ItemGroup>
+
 </Project>
