--- a/src/Web/Web.MVC/Web.MVC/Web.MVC.csproj
+++ b/src/Web/Web.MVC/Web.MVC/Web.MVC.csproj
@@ -44,4 +44,8 @@
     <UpToDateCheckInput Remove="Views\Comment\SuggestComment.cshtml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\ViewModels\" />
+  </ItemGroup>
+
 </Project>
