--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,6 +89,32 @@ services:
         - rabbitmq
         - postgres-comment-microservice
 
+    report-microservice-api:
+      image: ${DOCKER_REGISTRY-}report-microservice-api
+      build:
+        context: .
+        dockerfile: src/Microservices/Report/ReportMicroservice/Dockerfile
+      ports:
+        - "1218:8080"
+      environment:
+        - ASPNETCORE_ENVIRONMENT=Development
+        - ASPNETCORE_URLS=http://+:8080
+      depends_on:
+        - postgres-report-microservice
+
+    postgres-report-microservice:
+      container_name: postgres-report-microservice
+      image: postgres:latest
+      expose:
+        - 5432
+      environment:
+        POSTGRES_USER: postgres
+        POSTGRES_PASSWORD: postgres
+        POSTGRES_DB: ReportMicroservice
+        POSTGRES_HOST: postgres-report-microservice
+      volumes: 
+        - postgres-data:/var/lib/postgresql/data
+
     postgres-comment-microservice:
       container_name: postgres-comment-microservice
       image: postgres:latest
@@ -171,6 +197,7 @@ services:
 volumes:
   postgres-data:    
     
+
 
 
 
