Add reference to Ban History Microservice api project

--- a/src/Microservices/BanHistory/tests/BanHistoryMicroservice.UnitTests/BanHistoryMicroservice.UnitTests.csproj
+++ b/src/Microservices/BanHistory/tests/BanHistoryMicroservice.UnitTests/BanHistoryMicroservice.UnitTests.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\BanHistoryMicroservice.Api\BanHistoryMicroservice.Api.csproj" />
+  </ItemGroup>
+
 </Project>
