--- a/src/Microservices/User/tests/UserMicroservice.UnitTests/UserMicroservice.UnitTests.csproj
+++ b/src/Microservices/User/tests/UserMicroservice.UnitTests/UserMicroservice.UnitTests.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\UserMicroservie.Api\UserMicroservice.Api.csproj" />
+  </ItemGroup>
+
 </Project>
