--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -100,6 +100,7 @@ services:
         - ASPNETCORE_ENVIRONMENT=Development
         - ASPNETCORE_URLS=http://+:8080
       depends_on:
+        - rabbitmq
         - postgres-report-microservice
 
     banhistory-microservice-api:
