--- a/src/Web/Web.MVC/Web.MVC/Web.MVC.csproj
+++ b/src/Web/Web.MVC/Web.MVC/Web.MVC.csproj
@@ -35,6 +35,7 @@
     <_ContentIncludedByDefault Remove="Views\Report\AddReport.cshtml" />
     <_ContentIncludedByDefault Remove="Views\Report\GetReport.cshtml" />
     <_ContentIncludedByDefault Remove="Views\Topic\Topic.cshtml" />
+    <_ContentIncludedByDefault Remove="Views\User\ChangeUserName.cshtml" />
     <_ContentIncludedByDefault Remove="Views\User\GetUser.cshtml" />
   </ItemGroup>
 
@@ -76,6 +77,10 @@
 
   <ItemGroup>
     <UpToDateCheckInput Remove="Views\Moderator\GetReportsByUserName.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\User\ChangeUserName.cshtml" />
   </ItemGroup>
 
 </Project>
