--- a/src/Microservices/Register/RegisterMicroservice.Api/RegisterMicroservice.Api.csproj
+++ b/src/Microservices/Register/RegisterMicroservice.Api/RegisterMicroservice.Api.csproj
@@ -12,6 +12,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Hangfire" Version="1.8.14" />
+    <PackageReference Include="Hangfire.PostgreSql" Version="1.20.9" />
     <PackageReference Include="MailKit" Version="4.7.1.1" />
     <PackageReference Include="MassTransit" Version="8.2.4" />
     <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
