Add database string to hangfire db

--- a/src/Microservices/Register/RegisterMicroservice.Api/appsettings.Development.json
+++ b/src/Microservices/Register/RegisterMicroservice.Api/appsettings.Development.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "Kestrel:Certificates:Development:Password": "08c8a485-4361-4e1b-a3aa-a6cb0bdd9cc9",
   "Database:ConnectionString": "Server=host.docker.internal;Port=5432;User id=postgres;password=postgres;database=RegisterMicroservice",
+  "Database:HangfireConnectionString": "Server=host.docker.internal;Port=5432;User id=postgres;password=postgres;database=Hangfire",
   "Email:CompanyName": "Arkeia",
   "Email:UserName": "11aaaaqa@gmail.com",
   "Email:Smtp": "smtp.gmail.com",
