--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -208,6 +208,19 @@ services:
        volumes: 
          - postgres-data:/var/lib/postgresql/data
 
+    postgres-hangfire:
+      container_name: postgres-hangfire
+      image: postgres:latest
+      expose:
+        - 5432
+      environment:
+        POSTGRES_USER: postgres
+        POSTGRES_PASSWORD: postgres
+        POSTGRES_DB: Hangfire
+        POSTGRES_HOST: postgres-hangfire
+      volumes: 
+        - postgres-data:/var/lib/postgresql/data
+
     rabbitmq:
         image: rabbitmq:3-management
         hostname: rabbitmq
