--- a/src/Microservices/Register/RegisterMicroservice.Api/RegisterMicroservice.Api.csproj
+++ b/src/Microservices/Register/RegisterMicroservice.Api/RegisterMicroservice.Api.csproj
@@ -13,6 +13,8 @@
 
   <ItemGroup>
     <PackageReference Include="Hangfire" Version="1.8.14" />
+    <PackageReference Include="Hangfire.AspNetCore" Version="1.8.14" />
+    <PackageReference Include="Hangfire.Core" Version="1.8.14" />
     <PackageReference Include="Hangfire.PostgreSql" Version="1.20.9" />
     <PackageReference Include="MailKit" Version="4.7.1.1" />
     <PackageReference Include="MassTransit" Version="8.2.4" />
