--- a/src/Microservices/Discussion/tests/DiscussionMicroservice.UnitTests/DiscussionMicroservice.UnitTests.csproj
+++ b/src/Microservices/Discussion/tests/DiscussionMicroservice.UnitTests/DiscussionMicroservice.UnitTests.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\DiscussionMicroservice.Api\DiscussionMicroservice.Api.csproj" />
+  </ItemGroup>
+
 </Project>
