--- a/src/Web/Web.MVC/Web.MVC/Web.MVC.csproj
+++ b/src/Web/Web.MVC/Web.MVC/Web.MVC.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <_ContentIncludedByDefault Remove="Views\Discussion\GetDiscussionsSortedByPopularityForToday.cshtml" />
+    <_ContentIncludedByDefault Remove="Views\Discussion\GetDiscussionsSortedByPopularityForWeek.cshtml" />
     <_ContentIncludedByDefault Remove="Views\Moderator\BanUserAndDeleteSuggestion.cshtml" />
     <_ContentIncludedByDefault Remove="Views\Moderator\ChangeUserRoles.cshtml" />
     <_ContentIncludedByDefault Remove="Views\Moderator\GetReportsByUserName.cshtml" />
@@ -111,6 +112,10 @@
 
   <ItemGroup>
     <UpToDateCheckInput Remove="Views\Discussion\GetDiscussionsSortedByPopularityForToday.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\Discussion\GetDiscussionsSortedByPopularityForWeek.cshtml" />
   </ItemGroup>
 
 </Project>
