Add reference to bookmarks microservice api project

--- a/src/Microservices/Bookmark/tests/BookmarkMicroservice.UnitTests/BookmarkMicroservice.UnitTests.csproj
+++ b/src/Microservices/Bookmark/tests/BookmarkMicroservice.UnitTests/BookmarkMicroservice.UnitTests.csproj
@@ -23,4 +23,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\BookmarkMicroservice.Api\BookmarkMicroservice.Api.csproj" />
+  </ItemGroup>
+
 </Project>
