--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -117,6 +117,32 @@ services:
         - rabbitmq
         - postgres-banhistory-microservice
 
+    bookmark-microservice-api:
+      image: ${DOCKER_REGISTRY-}bookmark-microservice-api
+      build:
+         context: .
+         dockerfile: src/Microservices/Bookmark/BookmarkMicroservice.Api/Dockerfile
+      ports:
+         - "5592:8080"
+      environment:
+         - ASPNETCORE_ENVIRONMENT=Development
+         - ASPNETCORE_URLS=http://+:8080
+      depends_on:
+         - postgres-bookmark-microservice
+
+    postgres-bookmark-microservice:
+      container_name: postgres-bookmark-microservice
+      image: postgres:latest
+      expose:
+        - 5432
+      environment:
+        POSTGRES_USER: postgres
+        POSTGRES_PASSWORD: postgres
+        POSTGRES_DB: BookmarkMicroservice
+        POSTGRES_HOST: postgres-bookmark-microservice
+      volumes: 
+        - postgres-data:/var/lib/postgresql/data
+
     postgres-banhistory-microservice:
       container_name: postgres-banhistory-microservice
       image: postgres:latest
@@ -237,9 +263,3 @@ services:
 
 volumes:
   postgres-data:    
-    
-
-
-
-
-
