--- a/src/Microservices/Bookmark/BookmarkMicroservice.Api/BookmarkMicroservice.Api.csproj
+++ b/src/Microservices/Bookmark/BookmarkMicroservice.Api/BookmarkMicroservice.Api.csproj
@@ -27,4 +27,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Building-blocks\MessageBus\MessageBus.csproj" />
+  </ItemGroup>
+
 </Project>
