--- a/src/Microservices/Bookmark/BookmarkMicroservice.Api/BookmarkMicroservice.Api.csproj
+++ b/src/Microservices/Bookmark/BookmarkMicroservice.Api/BookmarkMicroservice.Api.csproj
@@ -31,4 +31,8 @@
     <ProjectReference Include="..\..\..\Building-blocks\MessageBus\MessageBus.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="MessageBus\Consumers\" />
+  </ItemGroup>
+
 </Project>
