--- a/src/Microservices/Bookmark/BookmarkMicroservice.Api/BookmarkMicroservice.Api.csproj
+++ b/src/Microservices/Bookmark/BookmarkMicroservice.Api/BookmarkMicroservice.Api.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Hangfire.Core" Version="1.8.14" />
     <PackageReference Include="MassTransit" Version="8.3.0" />
     <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.0" />
